# holssi-website

./: LICENSE  README.md
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  sqlx-data.json
backend/dbschema/: default.esdl
backend/dbschema/migrations/: 00001.edgeql  00002.edgeql
backend/migrations/: 20230304041110_init.sql
backend/src/: common.rs  db.rs  file.rs  flyio.rs  main.rs  nonce.rs  project.rs  query.rs  route.rs
backend/src/builder/: flyio.rs  machine.rs  mod.rs
frontend/: .env.local.example  .eslintrc.json  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  wrangler.toml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/about/privacy/: page.tsx
frontend/src/app/project/: layout.tsx  page.tsx
frontend/src/app/project/1/: layout.tsx  page.tsx
frontend/src/app/project/2/: layout.tsx  page.tsx
frontend/src/app/project/3/: layout.tsx  page.tsx
frontend/src/app/project/4/: layout.tsx  page.tsx
frontend/src/app/project/5/: layout.tsx  page.tsx
frontend/src/components/: AdfitAd.tsx  AppProvider.tsx  AppTitle.tsx  BottomContainer.tsx  Button.tsx  CheckBox.tsx  Error.tsx  ErrorMsg.tsx  FileInput.tsx  ItemTitle.tsx  Loading.tsx  Nav.tsx  PageTitle.tsx  Radio.tsx  RadioBox.tsx  Section.tsx  SegmentedControl.tsx  Step.tsx  TextInput.tsx
frontend/src/components/steps/: InputProjectInfo.tsx  Result.tsx  SelectOption.tsx  SelectProject.tsx  Waiting.tsx
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/pages/project/: [id].tsx
frontend/src/store/: hooks.ts  index.ts  projectSlice.ts
frontend/src/utils/: build.ts  fetch.ts  gtag.ts  hook.tsx  hooks.ts
worker/: .gitignore  Cargo.toml  wrangler.toml.example
worker/src/: body.rs  lib.rs  project.rs  rate_limit.rs
