[package]
name = "holssi-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
anyhow = "1.0"
axum = { version = "0.6", features = ["multipart"] }
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors", "trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.3.0", features = ["serde", "v4", "fast-rng"] }
aws-config = "0.54.1"
aws-sdk-s3 = "0.24.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "uuid", "chrono", "offline" ] }
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["rustls-tls", "json"], default-features = false }
percent-encoding = "2.2.0"
